<resources>
    <string name="app_name">Zunguka</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="buildings">Buildings</string>
    <string name="schools">Schools</string>
    <string name="wifi_zones">Wifi Zones</string>
    <string name="gates">Gates</string>
    <string name="directions">Directions</string>
    <string name="dark_theme">Dark Theme</string>


    <string name="location_latitude">-1.090832</string>
    <string name="location_longitude">37.012402</string>
    <string name="map_box_access_token">pk.eyJ1IjoiZ2l0YXVtb3NlczQiLCJhIjoiY2pjOWdhODg4MG9kYzJ3bzR0eHE0ZXVodyJ9.zU1cfiq9SWoVsTaPdoFnBQ</string>
    <string name="more">More</string>
    <string name="satellite">Satellite Map</string>
    <string name="starting_point">Choose starting point</string>
    <string name="destination_point">Choose destination point</string>
    <string name="hint_filter">Type to filter...</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="history">History</string>
    <string name="places">Places</string>
    <string name="parks">Parks</string>
    <string name="search_location">Search...</string>
    <string name="reset">Reset Map</string>
</resources>
