<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_buildings"
        android:icon="@drawable/buildings"
        android:title="@string/buildings" />
    <item
        android:id="@+id/nav_schools"
        android:icon="@drawable/schools"
        android:title="@string/schools" />
    <item
        android:id="@+id/nav_wifi_zones"
        android:icon="@drawable/wifi_zones"
        android:title="@string/wifi_zones" />
    <item
        android:id="@+id/nav_gates"
        android:icon="@drawable/gates"
        android:title="@string/gates" />
    <item
        android:id="@+id/nav_directions"
        android:icon="@drawable/directions"
        android:title="@string/directions" />

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_dark_theme"
                android:icon="@drawable/theme"
                android:title="@string/dark_theme"
                app:actionViewClass="android.support.v7.widget.SwitchCompat" />

            <item
                android:id="@+id/nav_satellite"
                android:icon="@drawable/satellite"
                android:title="@string/satellite"
                app:actionViewClass="android.support.v7.widget.SwitchCompat" />
        </menu>
    </item>
</menu>
